// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldGranularity Component should export select options: toolbarFieldOptions 1`] = `
Array [
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})",
    "value": Object {
      "endDate": 2019-08-01T00:00:00.000Z,
      "startDate": 2019-07-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"June\\"})",
    "value": Object {
      "endDate": 2019-07-01T00:00:00.000Z,
      "startDate": 2019-06-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"May\\"})",
    "value": Object {
      "endDate": 2019-06-01T00:00:00.000Z,
      "startDate": 2019-05-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"April\\"})",
    "value": Object {
      "endDate": 2019-05-01T00:00:00.000Z,
      "startDate": 2019-04-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"March\\"})",
    "value": Object {
      "endDate": 2019-04-01T00:00:00.000Z,
      "startDate": 2019-03-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"February\\"})",
    "value": Object {
      "endDate": 2019-03-01T00:00:00.000Z,
      "startDate": 2019-02-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"January\\"})",
    "value": Object {
      "endDate": 2019-02-01T00:00:00.000Z,
      "startDate": 2019-01-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"December 2018\\"})",
    "value": Object {
      "endDate": 2019-01-01T00:00:00.000Z,
      "startDate": 2018-12-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"November 2018\\"})",
    "value": Object {
      "endDate": 2018-12-01T00:00:00.000Z,
      "startDate": 2018-11-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"October 2018\\"})",
    "value": Object {
      "endDate": 2018-11-01T00:00:00.000Z,
      "startDate": 2018-10-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"September 2018\\"})",
    "value": Object {
      "endDate": 2018-10-01T00:00:00.000Z,
      "startDate": 2018-09-01T00:00:00.000Z,
    },
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"August 2018\\"})",
    "value": Object {
      "endDate": 2018-09-01T00:00:00.000Z,
      "startDate": 2018-08-01T00:00:00.000Z,
    },
  },
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state: dispatch date range 1`] = `
Array [
  Array [
    Array [
      Object {
        "granularity": "daily",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": "toolbarFieldRangeGranularity",
      },
      Object {
        "beginning": "2019-07-01T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": "toolbarFieldRangeGranularity",
      },
      Object {
        "ending": "2019-08-01T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": "toolbarFieldRangeGranularity",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should render a non-connected component: non-connected 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  ariaLabel="Select option"
  className=""
  id="generatedid-"
  isDisabled={false}
  isToggleText={true}
  maxHeight={250}
  name={null}
  onSelect={[Function]}
  options={
    Array [
      Object {
        "selected": true,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})",
        "value": Object {
          "endDate": 2019-08-01T00:00:00.000Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"June\\"})",
        "value": Object {
          "endDate": 2019-07-01T00:00:00.000Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"May\\"})",
        "value": Object {
          "endDate": 2019-06-01T00:00:00.000Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"April\\"})",
        "value": Object {
          "endDate": 2019-05-01T00:00:00.000Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"March\\"})",
        "value": Object {
          "endDate": 2019-04-01T00:00:00.000Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"February\\"})",
        "value": Object {
          "endDate": 2019-03-01T00:00:00.000Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"January\\"})",
        "value": Object {
          "endDate": 2019-02-01T00:00:00.000Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"December 2018\\"})",
        "value": Object {
          "endDate": 2019-01-01T00:00:00.000Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"November 2018\\"})",
        "value": Object {
          "endDate": 2018-12-01T00:00:00.000Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"October 2018\\"})",
        "value": Object {
          "endDate": 2018-11-01T00:00:00.000Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"September 2018\\"})",
        "value": Object {
          "endDate": 2018-10-01T00:00:00.000Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularityRange, {\\"context\\":\\"August 2018\\"})",
        "value": Object {
          "endDate": 2018-09-01T00:00:00.000Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  selectedOptions="t(curiosity-toolbar.granularityRange, {\\"context\\":\\"current\\"})"
  toggleIcon={null}
  variant="single"
/>
`;
